feat(core): Pull shortcuts to spectrw
Now spectrw's default shortcuts are in the spectrw.conf file

The spectrw's status bar have a blinking message when the battery is
below 10%

Add a dicio script to search for words at <https://dicio.com.br/>

Change configs on bashconfig and vimrc

--- a/spectrwmbar.conf
+++ b/spectrwmbar.conf
@@ -1,10 +1,18 @@
 #!/bin/bash
 # From http://wiki.archlinux.org/index.php/Scrotwm
 
-SLEEP_SEC=5
+SLEEP_SEC=1
 while :; do
 
 	. /sys/class/power_supply/BAT0/uevent
+
+	case $BLINK in
+		False)
+		BLINK=True
+		;;
+		*)
+		BLINK=False
+	esac
 
 	case $POWER_SUPPLY_PRESENT in
 		0)
@@ -31,7 +39,12 @@ while :; do
 		;;
 	esac
 
-	echo -e "$POWER_STR | `date +"%H:%M %a %d %b"`"
+	CURR_MSG="$POWER_STR | `date +"%H:%M %a %d %b"`"
+
+	if [ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $POWER_SUPPLY_STATUS == Discharging ] && [ $BLINK == True ]; then
+		CURR_MSG="$CURR_MSG | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!"
+	fi
+	echo -e $CURR_MSG
 
 	sleep $SLEEP_SEC
 done
