feat(spectrwmbar): Add blink when full batery

--- a/spectrwmbar.conf
+++ b/spectrwmbar.conf
@@ -22,12 +22,14 @@ while :; do
 		case $POWER_SUPPLY_STATUS in
 			Full)
 			POWER_STR="100%, fully charged"
+			[ $BLINK == True ] && POWER_STR="$POWER_STR | Take it off, you shit!"
 			;;
 			Charging)
 			POWER_STR="$POWER_SUPPLY_CAPACITY%, plugged"
 			;;
 			Discharging)
 			POWER_STR="$POWER_SUPPLY_CAPACITY%, unplugged"
+			[ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $BLINK == True ] && POWER_STR="$POWER_STR | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!"
 			;;
 			*)
 			POWER_STR=$POWER_SUPPLY_STATUS
@@ -39,11 +41,8 @@ while :; do
 		;;
 	esac
 
-	CURR_MSG="$POWER_STR | `date +"%H:%M %a %d %b"`"
+	CURR_MSG="`date +"%H:%M %a %d %b"` | $POWER_STR"
 
-	if [ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $POWER_SUPPLY_STATUS == Discharging ] && [ $BLINK == True ]; then
-		CURR_MSG="$CURR_MSG | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!"
-	fi
 	echo -e $CURR_MSG
 
 	sleep $SLEEP_SEC
