feat(vimrc): Add new configs
Add configs to vimrc and tried to fix indents in spectrwmbar

--- a/spectrwmbar.conf
+++ b/spectrwmbar.conf
@@ -15,30 +15,23 @@ while :; do
 	esac
 
 	case $POWER_SUPPLY_PRESENT in
-		0)
-		POWER_STR="AC, NO BATTERY"
-		;;
-		1)
+	0)
+			POWER_STR="AC, NO BATTERY" ;;
+	1)
 		case $POWER_SUPPLY_STATUS in
-			Full)
+		Full)
 			POWER_STR="100%, fully charged"
-			[ $BLINK == True ] && POWER_STR="$POWER_STR | Take it off, you shit!"
-			;;
-			Charging)
-			POWER_STR="$POWER_SUPPLY_CAPACITY%, plugged"
-			;;
-			Discharging)
+			[ $BLINK == True ] && POWER_STR="$POWER_STR | Take it off, you shit!" ;;
+		Charging)
+			POWER_STR="$POWER_SUPPLY_CAPACITY%, plugged" ;;
+		Discharging)
 			POWER_STR="$POWER_SUPPLY_CAPACITY%, unplugged"
-			[ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $BLINK == True ] && POWER_STR="$POWER_STR | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!"
-			;;
-			*)
-			POWER_STR=$POWER_SUPPLY_STATUS
-			;;
-		esac
-		;;
+			[ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $BLINK == True ] && POWER_STR="$POWER_STR | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!" ;;
 		*)
-		POWER_STR="error"
-		;;
+			POWER_STR=$POWER_SUPPLY_STATUS ;;
+		esac ;;
+	*)
+		POWER_STR="error" ;;
 	esac
 
 	CURR_MSG="`date +"%H:%M %a %d %b"` | $POWER_STR"
