feat(bar): Add vpn status
Add vpn status to "VPN up" or "VPN down" depending if there is or not a
connection of type tun at `nmcli c`

--- a/spectrwmbar.conf
+++ b/spectrwmbar.conf
@@ -34,7 +34,14 @@ while :; do
 		POWER_STR="error" ;;
 	esac
 
-	CURR_MSG="`date +"%H:%M %a %d %b"` | $POWER_STR"
+	CURR_MSG="`if echo $(nmcli c) | grep -q "tun"
+	then\
+		echo "VPN up"
+	else\
+		echo "VPN down"
+	fi`"
+
+	CURR_MSG="`date +"%H:%M %a %d %b"` | $CURR_MSG | $POWER_STR"
 
 	echo -e $CURR_MSG
 
