--- a/spectrwmbar.conf
+++ b/spectrwmbar.conf
@@ -16,17 +16,27 @@ while :; do
 
 	case $POWER_SUPPLY_PRESENT in
 	0)
-			POWER_STR="AC, NO BATTERY" ;;
+			POWER_STR="There's no battery plugged. Just saying..." ;;
 	1)
 		case $POWER_SUPPLY_STATUS in
 		Full)
 			POWER_STR="100%, fully charged"
-			[ $BLINK == True ] && POWER_STR="$POWER_STR | Take it off, you shit!" ;;
+			if [ $BLINK == True ]; then
+				POWER_STR="$POWER_STR | Take it off, YOU FUCK! It has been juiced A LOT already!"
+			fi
+			;;
 		Charging)
-			POWER_STR="$POWER_SUPPLY_CAPACITY%, plugged" ;;
+			POWER_STR="$POWER_SUPPLY_CAPACITY%, plugged"
+			if [ $POWER_SUPPLY_CAPACITY -ge 90 ] && [ $BLINK == True ]; then
+				POWER_STR="$POWER_STR | Take it off, it has been juiced enough!"
+			fi
+			;;
 		Discharging)
 			POWER_STR="$POWER_SUPPLY_CAPACITY%, unplugged"
-			[ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $BLINK == True ] && POWER_STR="$POWER_STR | Coloca na tomada, PORRA (desculpa se eu estiver apresentando)!" ;;
+			if [ $POWER_SUPPLY_CAPACITY -le 10 ] && [ $BLINK == True ]; then
+				POWER_STR="$POWER_STR | Juice it or it will lose POWER!"
+			fi
+			;;
 		*)
 			POWER_STR=$POWER_SUPPLY_STATUS ;;
 		esac ;;
@@ -34,14 +44,14 @@ while :; do
 		POWER_STR="error" ;;
 	esac
 
-	CURR_MSG="`if echo $(nmcli c) | grep -q "tun"
+	VPN_STR="`if echo $(nmcli c) | grep -q "tun"
 	then\
 		echo "VPN up"
 	else\
 		echo "VPN down"
 	fi`"
 
-	CURR_MSG="`date +"%H:%M %a %d %b"` | $CURR_MSG | $POWER_STR"
+	CURR_MSG="`date +"%H:%M %a %d %b"` | $VPN_STR | $POWER_STR"
 
 	echo -e $CURR_MSG
 
