feat(core): Tweak vimrc and add new commands
Tweak vimrc to be more minimalistic and have a better feel (currently
ran into some problems, but can't fix)

Add new command: dict (like dicio, but in english)

Minor tweak on spectrwm.conf to rename and configure workspaces

ll now has the long list, not the optimized long list

--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -7,9 +7,12 @@ bar_font		= Terminus:pixelsize=14:antialias=true
 bar_action		= ~/.spectrwmbar.conf
 bar_format		= +N:+I +S +< | +< +A
 
-autorun		= ws[1]:alacritty
+layout		= ws[3]:0:0:0:0:fullscreen
+layout		= ws[4]:0:0:0:0:fullscreen
 
 name			= ws[1]:Console
+name			= ws[2]:Browser
+name			= ws[3]:Social
 
 modkey = Mod4 # Windows key to modkey
 
