--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -7,6 +7,7 @@ bar_font		= Terminus:pixelsize=14:antialias=true
 bar_action		= ~/.spectrwmbar.conf
 bar_format		= +N:+I +S +< | +< +A
 
+layout		= ws[2]:0:0:0:0:fullscreen
 layout		= ws[3]:0:0:0:0:fullscreen
 layout		= ws[4]:0:0:0:0:fullscreen
 
