feat(core): Add support to opaque terminal
Make the terminal and vim transparents

--- a/alacritty.conf
+++ b/alacritty.conf
@@ -89,7 +89,7 @@ cursor:
   #   - ▇ Block
   #   - _ Underline
   #   - | Beam
-  style: Underline
+  style: Block
   unfocused_hollow: true
 
 dynamic_title: true
