--- a/i3.conf
+++ b/i3.conf
@@ -92,6 +92,14 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+bindsym $mod+Shift+Left move workspace to output left
+bindsym $mod+Shift+Right move workspace to output right
+bindsym $mod+m move workspace to output left
+
+assign [class="tor"]2
+assign [class="discord"]3
+assign [class="telegram"]3
+
 # reload the config file
 bindsym $mod+Shift+c reload
 # restart i3 inplace
