--- a/i3status.conf
+++ b/i3status.conf
@@ -14,20 +14,15 @@ general {
 order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
-order += "path_exists VPN"
 order += "battery all"
-order += "disk /"
 order += "load"
 order += "memory"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
-}
-
-path_exists VPN {
-	path = "/proc/sys/net/ipv4/conf/tun0"
 }
 
 ethernet _first_ {
@@ -39,10 +34,6 @@ battery all {
         format = "%status %percentage %remaining"
 }
 
-disk "/" {
-        format = "%avail"
-}
-
 load {
         format = "%1min"
 }
@@ -51,6 +42,12 @@ memory {
         format = "%used | %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
+}
+
+volume master {
+	format = "%volume"
+	format_muted = "M %volume"
+	device = "default"
 }
 
 tztime local {
