feat(core): New commands to custom alacritty
Add new commands to customize the size of fonts and opacity of
background on the terminal (specifically alacritty)

Also minor tweaks on other options

--- a/i3status.conf
+++ b/i3status.conf
@@ -39,7 +39,7 @@ load {
 }
 
 memory {
-        format = "%used | %available"
+        format = "%used/%total"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
