feat(core): List programs on readme

--- a/i3.conf
+++ b/i3.conf
@@ -27,7 +27,7 @@ bindsym $mod+Return exec alacritty
 
 bindsym $mod+x kill
 
-bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+p exec --no-startup-id dmenu_run
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
