feat(core): New alias and vim keybindings
Vim now with a few new keybindings to work with multi-window setup\
Add new alias `..` on bashrc\
Change search engines from browser to terminal (cppreference)\
tmux now with a few minor tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,14 +14,9 @@ bind-key C-a last-window
 # pane colors and display
 
 # create more intuitive split key combos (same as modern screen)
-unbind |
-bind | split-window -h
-bind '\' split-window -h
-bind 'C-\' split-window -h
+bind '\' split-window -h -c "#{pane_current_path}"
 unbind -
-bind - split-window -v
-unbind _
-bind _ split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # vi for copy mode
 setw -g mode-keys vi
@@ -41,15 +36,12 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# avoid cursor movement messing with resize
-set -g repeat-time 200
-
 # colors, clock, and stuff
 set -g default-terminal "xterm-256color" # works, but oh so wrong
 set -ga terminal-overrides ",xterm-256color*:Tc"
-set -g clock-mode-style 12
-set -g base-index 1
-setw -g pane-base-index 1
+set -g clock-mode-style 24
+set -g base-index 0
+setw -g pane-base-index 0
 
 # die, die, die (just be careful, right next to C-c)
 bind -r C-x confirm kill-server
