feat(core): print shortcut to i3 using flameshot
And remove sec alias as it will be done only in **some** of my systems
through a custom `.bashrc`

--- a/i3.conf
+++ b/i3.conf
@@ -107,6 +107,9 @@ bindsym $mod+Shift+r restart
 # exit i3
 bindsym $mod+Shift+e exec i3-msg exit
 
+# Custom kb
+bindsym Print exec flameshot gui
+
 mode "resize" {
 	bindsym h resize shrink width 10 px or 10 ppt
 	bindsym j resize grow height 10 px or 10 ppt
