feat(starship): change starship config
Permanently display username and hostname

--- a/starship.toml
+++ b/starship.toml
@@ -16,3 +16,10 @@ symbol = "cmake"
 [git_branch]
 symbol = "branch "
 
+[username]
+show_always = true
+format = "[$user]($style)@"
+
+[hostname]
+ssh_only = false
+
