feat(core): change from vim to nvim
Change for performance with a lot of plugins

Change font size from 10 to 9 (was 9 some time ago, but I don't know why
it changed)

Verbosity to things I use on `starship.toml`

--- a/starship.toml
+++ b/starship.toml
@@ -16,10 +16,16 @@ symbol = "cmake"
 [git_branch]
 symbol = "branch "
 
+[hostname]
+ssh_only = false
+
+[ruby]
+symbol = "ruby "
+
+[rust]
+symbol = "rust "
+
 [username]
 show_always = true
 format = "[$user]($style)@"
-
-[hostname]
-ssh_only = false
 
