feat(starship): add symbols for languages I use
I think I won't be using any of the other languages, but these I had (or
have) some sort of interest, connection or need to use, so here I am.

--- a/starship.toml
+++ b/starship.toml
@@ -21,11 +21,26 @@ style = "bold yellow"
 format = "via [$symbol $version]($style) "
 symbol = "cmake"
 
+[erlang]
+symbol = "erlang "
+
 [git_branch]
 symbol = "branch "
 
 [hostname]
 ssh_only = false
+
+[lua]
+symbol = "lua "
+
+[perl]
+symbol = "perl "
+
+[php]
+symbol = "php "
+
+[python]
+symbol = "python "
 
 [ruby]
 symbol = "ruby "
