feat(dunno): fast bkp before pc format

--- a/i3.conf
+++ b/i3.conf
@@ -13,7 +13,7 @@ font pango:monospace 9
 #exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 #exec --no-startup-id nm-applet
 
-exec --no-startup-id feh --bg-fill $HOME/Documents/wallpapers/vapor.png
+exec --no-startup-id feh --bg-fill $HOME/Documents/wallpapers/vapor.jpg
 
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -111,10 +111,15 @@ bindsym $mod+Shift+e exec i3-msg exit
 bindsym Print exec flameshot gui
 
 mode "resize" {
-	bindsym h resize shrink width 10 px or 10 ppt
-	bindsym j resize grow height 10 px or 10 ppt
-	bindsym k resize shrink height 10 px or 10 ppt
-	bindsym l resize grow width 10 px or 10 ppt
+#	bindsym h resize shrink width 10 px or 10 ppt
+#	bindsym j resize grow height 10 px or 10 ppt
+#	bindsym k resize shrink height 10 px or 10 ppt
+#	bindsym l resize grow width 10 px or 10 ppt
+
+	bindsym h resize shrink width 10 px
+	bindsym j resize grow height 10 px
+	bindsym k resize shrink height 10 px
+	bindsym l resize grow width 10 px
 
 	bindsym $mod+r mode "default"
 }
