--- a/i3status.conf
+++ b/i3status.conf
@@ -11,7 +11,6 @@ general {
         interval = 5
 }
 
-order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
@@ -39,5 +38,5 @@ volume master {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %H:%M"
 }
