feat(starship): add verbosity to directory tag

--- a/starship.toml
+++ b/starship.toml
@@ -21,6 +21,9 @@ style = "bold yellow"
 format = "via [$symbol $version]($style) "
 symbol = "cmake"
 
+[directory]
+read_only = "(read only) "
+
 [erlang]
 symbol = "erlang "
 
