feat(core): change config to fit voidlinux os

--- a/i3.conf
+++ b/i3.conf
@@ -1,6 +1,9 @@
 default_border none
 default_floating_border none
 
+gaps inner 25
+gaps top 20
+
 focus_follows_mouse no
 
 set $mod Mod4
@@ -23,11 +26,11 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 floating_modifier $mod
 
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec alacritty -e tmux
 
 bindsym $mod+x kill
 
-bindsym $mod+p exec --no-startup-id dmenu_run
+bindsym $mod+p exec --no-startup-id rofi -show run
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -96,9 +99,10 @@ bindsym $mod+Shift+Left move workspace to output left
 bindsym $mod+Shift+Right move workspace to output right
 bindsym $mod+m move workspace to output left
 
-assign [class="tor"]2
-assign [class="discord"]3
-assign [class="telegram"]3
+assign [class="[t|T]or"]2
+assign [class="[f|F]irefox"]2
+assign [class="[d|D]iscord"]3
+assign [class="[t|T]elegram"]3
 
 # reload the config file
 bindsym $mod+Shift+c reload
@@ -126,8 +130,5 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bar {
-	position top
-	status_command i3status
-}
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
