feat(config): add keymap on i3wm and plugin on vim
Add a keymap to work better with multiple monitors and

Add NERDTree plugin to work with multiple files on vim

--- a/i3.conf
+++ b/i3.conf
@@ -97,6 +97,8 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 bindsym $mod+Shift+Left move workspace to output left
 bindsym $mod+Shift+Right move workspace to output right
+bindsym $mod+Shift+Up move workspace to output up
+bindsym $mod+Shift+Down move workspace to output down
 bindsym $mod+m move workspace to output left
 
 assign [class="[t|T]or"]2
