feat(gui): add new browser and resize gaps
Resize i3-gaps gap size

Change to a new browser and add its configs to the dotfiles

Add new config to bashrc to enable autocd (which I didn't knew existed
      before... nice)

Edit README.md to reflect new config files

--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -1,8 +1,8 @@
 default_border none
 default_floating_border none
 
-gaps inner 25
-gaps top 20
+gaps inner 5
+gaps top 32
 
 focus_follows_mouse no
 
@@ -104,6 +104,7 @@ bindsym $mod+m move workspace to output left
 assign [class="(?i)tor"]2
 assign [class="(?i)firefox"]2
 assign [class="(?i)librewolf"]2
+assign [class="(?i)qutebrowser"]2
 assign [class="(?i)discord"]3
 assign [class="(?i)telegram"]3
 assign [class="(?i)steam"]5
