--- a/gui/.config/polybar/config
+++ b/gui/.config/polybar/config
@@ -38,7 +38,7 @@ white = #FFFFFF
 ;bottom = true
 override-redirect = true
 width = 100%
-height = 25
+height = 22
 offset-x = 0
 offset-y = 0
 ;radius = 6.0
@@ -70,7 +70,7 @@ modules-left = i3
 modules-center = wlan eth volume battery
 modules-right = date
 
-;tray-position = right
+tray-detached = true
 
 wm-restack = i3
 
