feat(core): add two new scripts
Add char script that shows info for a char (stupid simple program) and
stabshell that automatically (with the help of `xdotool`) stabilizes a
reverse shell

Also try to add more adblocking to qutebrowser (to no avail), add case
insensitive tab completion for bash and remove/change/add some vim
keybinds because of a rather unfortunate keymap reassign that happens
while using netrw (especifically ctrl+l or <C-l>)

--- a/gui/.config/polybar/config
+++ b/gui/.config/polybar/config
@@ -301,7 +301,7 @@ time-format = %H:%M
 format-underline = #55aa55
 label-charging = %percentage%%
 label-discharging = %percentage%%
-label-full = FULL
+label-full = フルバッテリー
 format-charging = <label-charging>
 format-charging-foreground = ${colors.foreground}
 format-discharging = <label-discharging>
