--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -27,6 +27,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 bindsym $mod+Return exec alacritty -e tmux
+bindsym $mod+Shift+s exec tsk
 
 bindsym $mod+x kill
 
