--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -97,6 +97,7 @@ assign [class="(?i)librewolf"]2
 assign [class="(?i)qutebrowser"]2
 assign [class="(?i)discord"]3
 assign [class="(?i)telegram"]3
+assign [class="(?i)signal"]3
 assign [class="(?i)steam"]5
 
 for_window [class="(?i)spotify"] move to workspace 4
