Change PATH dir, gitconfig and qutebrowser's style
PATH now prioritizes `~/.bin/` matches rather than older PATH
directories.

Git's new conflict style is now a three-way diff including the latest
common commit, the new and the current commit state.

Remove qutebrowser's background being set on config, but be warned that
      now blindness effects might be applied to whoever opens a page's
      source code at night. Warnings have been given.

--- a/base/.gitconfig
+++ b/base/.gitconfig
@@ -1,10 +1,14 @@
 [user]
 	name = João Fukuda
 	email = joao.fukuda@protonmail.com
+
 [core]
 	editor = nvim
+
 [pull]
 	rebase = false
+
 [merge]
 	tool = nvimdiff
+	conflictStyle=diff3
 
