Change screenkey cfgs and add programming commands
Change screenkey configs for better integration with my terminal and...

Add commands and vim plugins for easier programming on C/C++ with the
help of tags

--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -101,6 +101,7 @@ assign [class="(?i)signal"]3
 assign [class="(?i)steam"]5
 
 for_window [class="(?i)spotify"] move to workspace 4
+for_window [class="(?i)factorio"] move to workspace 5
 
 # reload the config file
 bindsym $mod+Shift+c reload
