[~] Fix qutebrowser config and add tmux keybind
Qutebrowser option that was deprecated for other was changed.

Added tmux binding to open message log

--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -5,9 +5,6 @@ unbind C-b
 unbind C-a
 set -g prefix C-a
 
-# use a different prefix for nested
-bind-key -n C-y send-prefix
-
 # add double-tap meta key to toggle last window
 bind-key C-a last-window
 
@@ -33,6 +30,8 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -r m show-messages
 
 # colors, clock, and stuff
 set -g default-terminal "xterm-256color" # works, but oh so wrong
