[+] A lot of small changes
To no surprise, I forgot again to update this repo, but here it is:

* vim
	* Remove vim's polyglot plugin to instead use treesitter's highlight
	* Configure treesitter
	* Add a custom Startify ascii art to prettify vim :)
	* Decrease the travel distance of comfortable motion
	* Disable wrapper and enable cursorline
* bashrc
	* Change dotfiles alias to instead use a runtime eval of $DF
* i3
	* remove qutebrowser and add luakit
* scripts
	* Add swpbash (because now I have an athame-configured bash and
	  I might want to use it later, but as it is very buggy right
	  now, I won't)
	* Fix dockerpurge not correctly evaluating if condition for
	  option 'all'

--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -94,7 +94,7 @@ bindsym $mod+m move workspace to output left
 assign [class="(?i)tor"]2
 assign [class="(?i)firefox"]2
 assign [class="(?i)librewolf"]2
-assign [class="(?i)qutebrowser"]2
+assign [class="(?i)luakit"]2
 assign [class="(?i)discord"]3
 assign [class="(?i)telegram"]3
 assign [class="(?i)signal"]3
