[=] ct now updates instead of re-generating
ct now updates entries instead of re-generating them every run (better
for big projects

tmux now changed default keybinds from <C-a> to <C-j> (I use <C-a> on
vim, but not <C-j>)

Vim now uses my snippets (for vim-snippets) (it's just a fork of
UltiSnips tho)

--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -2,8 +2,8 @@ set -g mouse on
 
 # change default meta key to same as screen
 unbind C-b
-unbind C-a
-set -g prefix C-a
+unbind C-j
+set -g prefix C-j
 
 # add double-tap meta key to toggle last window
 bind-key C-a last-window
