--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -95,6 +95,7 @@ assign [class="(?i)tor"]2
 assign [class="(?i)firefox"]2
 assign [class="(?i)librewolf"]2
 assign [class="(?i)vimb"]2
+assign [class="(?i)qutebrowser"]2
 assign [class="(?i)discord"]3
 assign [class="(?i)telegram"]3
 assign [class="(?i)signal"]3
