--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -2,8 +2,8 @@ set -g mouse on
 
 # change default meta key to same as screen
 unbind C-b
-unbind C-j
-set -g prefix C-j
+unbind C-space
+set -g prefix C-space
 
 # add double-tap meta key to toggle last window
 bind-key C-a last-window
