--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -33,6 +33,8 @@ bind -r l select-pane -R
 
 bind -r m show-messages
 
+bind -r C-space send-prefix
+
 # colors, clock, and stuff
 set -g default-terminal "xterm-256color" # works, but oh so wrong
 set -ga terminal-overrides ",xterm-256color*:Tc"
