Fix nvim lsp comp and change keyboard to us
Among many other things which I actually won't bother remembering
(sorry)

--- a/base/.tmux.conf
+++ b/base/.tmux.conf
@@ -41,6 +41,8 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 set -g clock-mode-style 24
 set -g base-index 0
 setw -g pane-base-index 0
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
 
 # die, die, die (just be careful, right next to C-c)
 bind -r C-x confirm kill-server
